changed table color

--- a/portal.html
+++ b/portal.html
@@ -14,7 +14,7 @@
     
     <!-- Table -->
     <div class="container">
-        <table class="table table-striped table-info" id="show"></table>
+        <table class="table table-striped table-success" id="show"></table>
 
         <button class="btn btn-success m-2 p-2">
             <a href="index.html" class="text-decoration-none text-white fw-bold">Return to Home</a>
